Upgrade to SLF4J 2